Make todo points nicer

--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -35,14 +35,14 @@
    "id": "5faeedc4",
    "metadata": {},
    "source": [
-    "* Double-check loop/link lengths. For example 3-loop east of Faxe\n",
-    "* Double-check edge_ids during simplifications\n",
-    "* X Snap POIs to the original link geometries, within a threshold\n",
-    "* X Incorporate gradients\n",
-    "* X Add loop permutations for node-based analysis\n",
-    "* X Drop non-main nodes\n",
-    "* X Drop loops (they are really dangling links)\n",
-    "* X Find all simple loops (bounded?-max length?) with networkX"
+    "- [ ] Double-check loop/link lengths. For example 3-loop east of Faxe\n",
+    "- [ ] Double-check edge_ids during simplifications\n",
+    "- [x] Snap POIs to the original link geometries, within a threshold\n",
+    "- [x] Incorporate gradients\n",
+    "- [x] Add loop permutations for node-based analysis\n",
+    "- [x] Drop non-main nodes\n",
+    "- [x] Drop loops (they are really dangling links)\n",
+    "- [x] Find all simple loops (bounded?-max length?) with networkX"
    ]
   },
   {
