--- a/code/02_explore_loops.ipynb
+++ b/code/02_explore_loops.ipynb
@@ -35,7 +35,7 @@
    "id": "227bd0ed-046a-4652-9df6-4980654b4565",
    "metadata": {},
    "source": [
-    "* POI analysis"
+    "- [ ] POI analysis"
    ]
   },
   {
