--- a/code/02_explore_loops.ipynb
+++ b/code/02_explore_loops.ipynb
@@ -56,15 +56,26 @@
     "loop_numnode_bound = 30\n",
     "scenario = \"scenario1\"\n",
     "\n",
-    "restrictions = {\"scenario1\": {\"looplengthmin\": 5000, \"looplengthmax\": 20000, \"maxslope\": 4, \"waterlengthmax\": 10000}, # family with small children\n",
-    "                \"scenario2\": {\"looplengthmin\": 10000, \"looplengthmax\": 40000, \"maxslope\": 6, \"waterlengthmax\": 10000} # teenage/adult leisure cyclist\n",
-    "                }\n",
+    "restrictions = {\n",
+    "    \"scenario1\": {  # family with small children\n",
+    "        \"looplengthmin\": 5000,\n",
+    "        \"looplengthmax\": 20000,\n",
+    "        \"maxslope\": 4,\n",
+    "        \"waterlengthmax\": 10000,\n",
+    "    },\n",
+    "    \"scenario2\": {  # teenage/adult leisure cyclist\n",
+    "        \"looplengthmin\": 10000,\n",
+    "        \"looplengthmax\": 40000,\n",
+    "        \"maxslope\": 6,\n",
+    "        \"waterlengthmax\": 10000,\n",
+    "    },\n",
+    "}\n",
     "\n",
     "PATH = {\n",
     "    \"data_in_network\": \"../data/input/faxe/network/\",\n",
     "    \"data_in_pois\": \"../data/input/faxe/pois/\",\n",
     "    \"data_out\": \"../data/processed/faxe/\",\n",
-    "    \"plot\": \"../plots/faxe/\"\n",
+    "    \"plot\": \"../plots/faxe/\",\n",
     "}"
    ]
   },
@@ -83,15 +94,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import geopandas as gpd\n",
-    "import igraph as ig\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import networkx as nx\n",
-    "from functools import reduce\n",
-    "import pickle \n",
-    "from itertools import compress\n",
-    "from random import seed, random"
+    "import pickle\n",
+    "from itertools import compress"
    ]
   },
   {
@@ -135,7 +141,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(PATH['data_out'] + 'loopcensus_'+str(loop_numnode_bound)+'.pkl', 'rb') as f:\n",
+    "with open(\n",
+    "    PATH[\"data_out\"] + \"loopcensus_\" + str(loop_numnode_bound) + \".pkl\", \"rb\"\n",
+    ") as f:\n",
     "    allloops = pickle.load(f)\n",
     "    alllooplengths = pickle.load(f)\n",
     "    allloopnumnodes = pickle.load(f)\n",
@@ -171,17 +179,17 @@
     "axes2 = fig.add_axes([0.55, 0.1, 0.35, 0.8])\n",
     "\n",
     "axes1.hist(alllooplengths, density=True)\n",
-    "axes1.set_xlabel('Length [m]')\n",
-    "axes1.set_ylabel('Probability')\n",
-    "axes1.set_title('Loop lengths')\n",
+    "axes1.set_xlabel(\"Length [m]\")\n",
+    "axes1.set_ylabel(\"Probability\")\n",
+    "axes1.set_title(\"Loop lengths\")\n",
     "\n",
-    "axes2.hist(allloopnumnodes, density=True, bins=list(range(loop_numnode_bound+1)))\n",
-    "axes2.set_xlabel('Nodes')\n",
-    "axes2.set_title('Nodes per loop')\n",
-    "axes2.set_xlim([0, loop_numnode_bound+0.5])\n",
+    "axes2.hist(allloopnumnodes, density=True, bins=list(range(loop_numnode_bound + 1)))\n",
+    "axes2.set_xlabel(\"Nodes\")\n",
+    "axes2.set_title(\"Nodes per loop\")\n",
+    "axes2.set_xlim([0, loop_numnode_bound + 0.5])\n",
     "\n",
-    "plt.text(loop_numnode_bound/20,0.01, \"Bound: \" + str(loop_numnode_bound))\n",
-    "plt.text(loop_numnode_bound/20,0.04, \"Loops: \" + str(numloops));"
+    "plt.text(loop_numnode_bound / 20, 0.01, \"Bound: \" + str(loop_numnode_bound))\n",
+    "plt.text(loop_numnode_bound / 20, 0.04, \"Loops: \" + str(numloops));"
    ]
   },
   {
@@ -209,12 +217,18 @@
    "source": [
     "allloops_bound = {}\n",
     "for sourcenode in allloops:\n",
-    "    this_lengths = np.array(allloops[sourcenode]['lengths'])\n",
-    "    mask_this = (this_lengths >= restrictions[scenario][\"looplengthmin\"]) & (this_lengths <= restrictions[scenario][\"looplengthmax\"])\n",
-    "    allloops_bound[sourcenode] = {\"loops\": list(compress(allloops[sourcenode]['loops'], mask_this)),\n",
-    "                                   \"lengths\": list(compress(allloops[sourcenode]['lengths'], mask_this)),\n",
-    "                                   \"numnodes\": list(compress(allloops[sourcenode]['numnodes'], mask_this)),\n",
-    "                                   \"water_profile\": list(compress(allloops[sourcenode]['water_profile'], mask_this))}"
+    "    this_lengths = np.array(allloops[sourcenode][\"lengths\"])\n",
+    "    mask_this = (this_lengths >= restrictions[scenario][\"looplengthmin\"]) & (\n",
+    "        this_lengths <= restrictions[scenario][\"looplengthmax\"]\n",
+    "    )\n",
+    "    allloops_bound[sourcenode] = {\n",
+    "        \"loops\": list(compress(allloops[sourcenode][\"loops\"], mask_this)),\n",
+    "        \"lengths\": list(compress(allloops[sourcenode][\"lengths\"], mask_this)),\n",
+    "        \"numnodes\": list(compress(allloops[sourcenode][\"numnodes\"], mask_this)),\n",
+    "        \"water_profile\": list(\n",
+    "            compress(allloops[sourcenode][\"water_profile\"], mask_this)\n",
+    "        ),\n",
+    "    }"
    ]
   },
   {
@@ -224,9 +238,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vertex_sizes=[len(allloops_bound[k]['loops']) for k in range(len(allloops_bound.keys()))]\n",
+    "vertex_sizes = [\n",
+    "    len(allloops_bound[k][\"loops\"]) for k in range(len(allloops_bound.keys()))\n",
+    "]\n",
     "numloops_max = max(vertex_sizes)\n",
-    "vertex_sizes = [i/(numloops_max/20) for i in vertex_sizes]"
+    "vertex_sizes = [i / (numloops_max / 20) for i in vertex_sizes]"
    ]
   },
   {
@@ -236,8 +252,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plotCheck(G, nodes_id, nodes_coords, vertex_size = vertex_sizes)\n",
-    "plt.text(0,0.04, \"Max # of loops: \" + str(numloops_max));\n",
+    "fig = plotCheck(G, nodes_id, nodes_coords, vertex_size=vertex_sizes)\n",
+    "plt.text(0, 0.04, \"Max # of loops: \" + str(numloops_max))\n",
     "plt.tight_layout()"
    ]
   },
@@ -248,7 +264,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig.savefig(PATH[\"plot\"] + \"network_numloops_\"+str(restrictions[scenario][\"looplengthmin\"])+\"to\"+str(restrictions[scenario][\"looplengthmax\"]))"
+    "fig.savefig(\n",
+    "    PATH[\"plot\"]\n",
+    "    + \"network_numloops_\"\n",
+    "    + str(restrictions[scenario][\"looplengthmin\"])\n",
+    "    + \"to\"\n",
+    "    + str(restrictions[scenario][\"looplengthmax\"])\n",
+    ")"
    ]
   },
   {
@@ -268,15 +290,19 @@
    "source": [
     "allloops_bound = {}\n",
     "for sourcenode in allloops:\n",
-    "    this_lengths = np.array(allloops[sourcenode]['lengths'])\n",
-    "    this_maxslopes = np.array(allloops[sourcenode]['max_slopes'])\n",
-    "    mask_this = (this_lengths >= restrictions[scenario][\"looplengthmin\"])\n",
-    "    mask_this &= (this_lengths <= restrictions[scenario][\"looplengthmax\"]) \n",
-    "    mask_this &= (this_maxslopes <= restrictions[scenario][\"maxslope\"])\n",
-    "    allloops_bound[sourcenode] = {\"loops\": list(compress(allloops[sourcenode]['loops'], mask_this)),\n",
-    "                                   \"lengths\": list(compress(allloops[sourcenode]['lengths'], mask_this)),\n",
-    "                                   \"numnodes\": list(compress(allloops[sourcenode]['numnodes'], mask_this)),\n",
-    "                                   \"water_profile\": list(compress(allloops[sourcenode]['water_profile'], mask_this))}"
+    "    this_lengths = np.array(allloops[sourcenode][\"lengths\"])\n",
+    "    this_maxslopes = np.array(allloops[sourcenode][\"max_slopes\"])\n",
+    "    mask_this = this_lengths >= restrictions[scenario][\"looplengthmin\"]\n",
+    "    mask_this &= this_lengths <= restrictions[scenario][\"looplengthmax\"]\n",
+    "    mask_this &= this_maxslopes <= restrictions[scenario][\"maxslope\"]\n",
+    "    allloops_bound[sourcenode] = {\n",
+    "        \"loops\": list(compress(allloops[sourcenode][\"loops\"], mask_this)),\n",
+    "        \"lengths\": list(compress(allloops[sourcenode][\"lengths\"], mask_this)),\n",
+    "        \"numnodes\": list(compress(allloops[sourcenode][\"numnodes\"], mask_this)),\n",
+    "        \"water_profile\": list(\n",
+    "            compress(allloops[sourcenode][\"water_profile\"], mask_this)\n",
+    "        ),\n",
+    "    }"
    ]
   },
   {
@@ -286,9 +312,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vertex_sizes=[len(allloops_bound[k]['loops']) for k in range(len(allloops_bound.keys()))]\n",
+    "vertex_sizes = [\n",
+    "    len(allloops_bound[k][\"loops\"]) for k in range(len(allloops_bound.keys()))\n",
+    "]\n",
     "numloops_max = max(vertex_sizes)\n",
-    "vertex_sizes = [i/(numloops_max/20) for i in vertex_sizes]"
+    "vertex_sizes = [i / (numloops_max / 20) for i in vertex_sizes]"
    ]
   },
   {
@@ -313,9 +341,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plotCheck(G, nodes_id, nodes_coords, vertex_size=vertex_sizes, edge_color=edge_colors)\n",
-    "plt.text(0,0.12, \"Red: Gradient >\"+ str(restrictions[scenario][\"maxslope\"])+\"%\", fontsize=8);\n",
-    "plt.text(0,0.04, \"Max # of loops: \" + str(numloops_max));\n",
+    "fig = plotCheck(\n",
+    "    G, nodes_id, nodes_coords, vertex_size=vertex_sizes, edge_color=edge_colors\n",
+    ")\n",
+    "plt.text(\n",
+    "    0,\n",
+    "    0.12,\n",
+    "    \"Red: Gradient >\" + str(restrictions[scenario][\"maxslope\"]) + \"%\",\n",
+    "    fontsize=8,\n",
+    ")\n",
+    "plt.text(0, 0.04, \"Max # of loops: \" + str(numloops_max))\n",
     "plt.tight_layout()"
    ]
   },
@@ -326,7 +361,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig.savefig(PATH[\"plot\"] + \"network_numloops_\"+str(restrictions[scenario][\"looplengthmin\"])+\"to\"+str(restrictions[scenario][\"looplengthmax\"])+\"_maxslope\"+str(restrictions[scenario][\"maxslope\"]))"
+    "fig.savefig(\n",
+    "    PATH[\"plot\"]\n",
+    "    + \"network_numloops_\"\n",
+    "    + str(restrictions[scenario][\"looplengthmin\"])\n",
+    "    + \"to\"\n",
+    "    + str(restrictions[scenario][\"looplengthmax\"])\n",
+    "    + \"_maxslope\"\n",
+    "    + str(restrictions[scenario][\"maxslope\"])\n",
+    ")"
    ]
   },
   {
@@ -345,27 +388,37 @@
    "outputs": [],
    "source": [
     "allloops_bound_watered = {}\n",
-    "for sourcenode in allloops_bound: \n",
+    "for sourcenode in allloops_bound:\n",
     "    numloops = len(allloops_bound[sourcenode][\"loops\"])\n",
     "    mask_this = [True] * numloops\n",
     "    for i in range(numloops):\n",
     "        wp = allloops_bound[sourcenode][\"water_profile\"][i]\n",
     "        water_enough = True\n",
-    "        if wp: # There is water on the way somewhere. Check distances\n",
+    "        if wp:  # There is water on the way somewhere. Check distances\n",
     "            for w in wp:\n",
     "                if w > restrictions[scenario][\"waterlengthmax\"]:\n",
     "                    water_enough = False\n",
     "                    break\n",
-    "            if water_enough and (allloops_bound[sourcenode][\"lengths\"][i] - wp[-1] > restrictions[scenario][\"waterlengthmax\"]):\n",
+    "            if water_enough and (\n",
+    "                allloops_bound[sourcenode][\"lengths\"][i] - wp[-1]\n",
+    "                > restrictions[scenario][\"waterlengthmax\"]\n",
+    "            ):\n",
     "                water_enough = False\n",
-    "        else: # No water on the way, so the loop is only valid if short enough\n",
-    "            if allloops_bound[sourcenode][\"lengths\"][i] > restrictions[scenario][\"waterlengthmax\"]:\n",
+    "        else:  # No water on the way, so the loop is only valid if short enough\n",
+    "            if (\n",
+    "                allloops_bound[sourcenode][\"lengths\"][i]\n",
+    "                > restrictions[scenario][\"waterlengthmax\"]\n",
+    "            ):\n",
     "                water_enough = False\n",
     "        mask_this[i] = water_enough\n",
-    "    allloops_bound_watered[sourcenode] = {\"loops\": list(compress(allloops_bound[sourcenode]['loops'], mask_this)),\n",
-    "                                   \"lengths\": list(compress(allloops_bound[sourcenode]['lengths'], mask_this)),\n",
-    "                                   \"numnodes\": list(compress(allloops_bound[sourcenode]['numnodes'], mask_this)),\n",
-    "                                   \"water_profile\": list(compress(allloops_bound[sourcenode]['water_profile'], mask_this))}"
+    "    allloops_bound_watered[sourcenode] = {\n",
+    "        \"loops\": list(compress(allloops_bound[sourcenode][\"loops\"], mask_this)),\n",
+    "        \"lengths\": list(compress(allloops_bound[sourcenode][\"lengths\"], mask_this)),\n",
+    "        \"numnodes\": list(compress(allloops_bound[sourcenode][\"numnodes\"], mask_this)),\n",
+    "        \"water_profile\": list(\n",
+    "            compress(allloops_bound[sourcenode][\"water_profile\"], mask_this)\n",
+    "        ),\n",
+    "    }"
    ]
   },
   {
@@ -375,9 +428,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vertex_sizes=[len(allloops_bound_watered[k]['loops']) for k in range(len(allloops_bound.keys()))]\n",
+    "vertex_sizes = [\n",
+    "    len(allloops_bound_watered[k][\"loops\"]) for k in range(len(allloops_bound.keys()))\n",
+    "]\n",
     "numloops_max = max(vertex_sizes)\n",
-    "vertex_sizes = [i/(numloops_max/20) for i in vertex_sizes]"
+    "vertex_sizes = [i / (numloops_max / 20) for i in vertex_sizes]"
    ]
   },
   {
@@ -389,7 +444,7 @@
    "source": [
     "edge_colors = []\n",
     "for e in G.es:\n",
-    "    if e[\"max_slope\"] > restrictions[scenario][\"maxslope\"]:# and not e[\"has_water\"]:\n",
+    "    if e[\"max_slope\"] > restrictions[scenario][\"maxslope\"]:  # and not e[\"has_water\"]:\n",
     "        edge_colors.append(\"red\")\n",
     "    # elif e[\"max_slope\"] > restrictions[scenario][\"maxslope\"] and e[\"has_water\"]:\n",
     "    #     edge_colors.append(\"orange\")\n",
@@ -406,11 +461,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plotCheck(G, nodes_id, nodes_coords, vertex_size=vertex_sizes, edge_color=edge_colors)\n",
-    "plt.text(0,0.17, \"Blue: Gradient <=\"+ str(restrictions[scenario][\"maxslope\"])+\"% and water\", fontsize=8);\n",
+    "fig = plotCheck(\n",
+    "    G, nodes_id, nodes_coords, vertex_size=vertex_sizes, edge_color=edge_colors\n",
+    ")\n",
+    "plt.text(\n",
+    "    0,\n",
+    "    0.17,\n",
+    "    \"Blue: Gradient <=\" + str(restrictions[scenario][\"maxslope\"]) + \"% and water\",\n",
+    "    fontsize=8,\n",
+    ")\n",
     "# plt.text(0,0.17, \"Orange: Gradient >\"+ str(restrictions[scenario][\"maxslope\"])+\"% and water\", fontsize=8);\n",
-    "plt.text(0,0.12, \"Red: Gradient >\"+ str(restrictions[scenario][\"maxslope\"])+\"%\", fontsize=8);\n",
-    "plt.text(0,0.04, \"Max # of loops: \" + str(numloops_max));\n",
+    "plt.text(\n",
+    "    0,\n",
+    "    0.12,\n",
+    "    \"Red: Gradient >\" + str(restrictions[scenario][\"maxslope\"]) + \"%\",\n",
+    "    fontsize=8,\n",
+    ")\n",
+    "plt.text(0, 0.04, \"Max # of loops: \" + str(numloops_max))\n",
     "plt.tight_layout()"
    ]
   },
@@ -423,15 +490,25 @@
    },
    "outputs": [],
    "source": [
-    "fig.savefig(PATH[\"plot\"] + \"network_numloops_\"+str(restrictions[scenario][\"looplengthmin\"])+\"to\"+str(restrictions[scenario][\"looplengthmax\"])+\"_maxslope\"+str(restrictions[scenario][\"maxslope\"])+\"_waterlengthmax\"+str(restrictions[scenario][\"waterlengthmax\"]))"
+    "fig.savefig(\n",
+    "    PATH[\"plot\"]\n",
+    "    + \"network_numloops_\"\n",
+    "    + str(restrictions[scenario][\"looplengthmin\"])\n",
+    "    + \"to\"\n",
+    "    + str(restrictions[scenario][\"looplengthmax\"])\n",
+    "    + \"_maxslope\"\n",
+    "    + str(restrictions[scenario][\"maxslope\"])\n",
+    "    + \"_waterlengthmax\"\n",
+    "    + str(restrictions[scenario][\"waterlengthmax\"])\n",
+    ")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cycreg",
+   "display_name": "bikenwloops",
    "language": "python",
-   "name": "cycreg"
+   "name": "bikenwloops"
   },
   "language_info": {
    "codemirror_mode": {
@@ -443,7 +520,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
