--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -61,16 +61,16 @@
    "outputs": [],
    "source": [
     "loop_numnode_bound = 30  # From 30 it starts getting slow\n",
-    "faceloop_limit = [\n",
+    "faceloop_limit = [  # 90% of face loop lengths should conform to these length limits [m]\n",
     "    15000,\n",
     "    30000,\n",
-    "]  # 90% of face loop lengths should conform to these length limits [m]\n",
-    "link_limit = [\n",
+    "]\n",
+    "link_limit = [  # Optimal length between first and second value, maximal length the last value [m]\n",
     "    1000,\n",
     "    5000,\n",
     "    10000,\n",
-    "]  # Optimal length between first and second value, maximal length the last value\n",
-    "maxslope_limit = 6\n",
+    "]\n",
+    "maxslope_limit = 6  # Maximum gradient [%]\n",
     "snap_threshold = 250  # Threshold to snap POIs to network links [m]\n",
     "\n",
     "PATH = {\n",
