Update DKNT face loop limits

--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -19,7 +19,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-01-24  \n",
-    "Last modified: 2024-02-19  "
+    "Last modified: 2024-05-24  "
    ]
   },
   {
@@ -37,6 +37,7 @@
    "source": [
     "- [ ] Double-check loop/link lengths. For example 3-loop east of Faxe\n",
     "- [ ] Double-check edge_ids during simplifications\n",
+    "- [ ] Add node distances to closest kommune boundary\n",
     "- [x] Snap POIs to the original link geometries, within a threshold\n",
     "- [x] Incorporate gradients\n",
     "- [x] Add loop permutations for node-based analysis\n",
@@ -62,8 +63,8 @@
    "source": [
     "loop_numnode_bound = 30  # From 30 it starts getting slow\n",
     "faceloop_limit = [  # 90% of face loop lengths should conform to these length limits [m]\n",
-    "    15000,\n",
-    "    30000,\n",
+    "    8000,\n",
+    "    20000,\n",
     "]\n",
     "link_limit = [  # Optimal length between first and second value, maximal length the last value [m]\n",
     "    1000,\n",
