--- a/code/02_explore_loops.ipynb
+++ b/code/02_explore_loops.ipynb
@@ -19,7 +19,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-01-29  \n",
-    "Last modified: 2024-02-19  "
+    "Last modified: 2024-05-24  "
    ]
   },
   {
@@ -96,6 +96,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import igraph as ig\n",
     "import pickle\n",
     "from itertools import compress"
    ]
