Add POI categories and diversity

--- a/code/02_explore_loops.ipynb
+++ b/code/02_explore_loops.ipynb
@@ -27,14 +27,8 @@
    "id": "5126c030",
    "metadata": {},
    "source": [
-    "## To do"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "227bd0ed-046a-4652-9df6-4980654b4565",
-   "metadata": {},
-   "source": [
+    "## To do\n",
+    "- [ ] Kommune cohesion: Loops vs distance to boundary\n",
     "- [ ] POI analysis"
    ]
   },
