--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -433,7 +433,12 @@
    "id": "4e2bbc07-b6bd-4b60-8ada-35f44bdd5d4d",
    "metadata": {},
    "source": [
-    "Snap POIs to network"
+    "Snap POIs to network. POIs come in 3 categories:\n",
+    "- Facilities (water station, bicycle repair station, supermarket, etc.)\n",
+    "- Services (camping ground, hotel, gas station, etc.)\n",
+    "- Attractions (church, museum, beach, etc.)  \n",
+    "\n",
+    "If any of these is within reach of a link, the link is assumed to provide water. Further, we define a link's POI diversity $Y \\in \\{0,1,2,3\\}$ as the unique number of POI categories within reach. For simplicity, reach is defined with the same constant `snap_threshold` for all POI categories."
    ]
   },
   {
@@ -441,7 +446,7 @@
    "id": "5f3760a9-efb8-4d37-bdee-25d2b7d75eeb",
    "metadata": {},
    "source": [
-    "We just have a relatively small number of facilities and links, so it should be fine to just loop through all pairwise"
+    "We have a small number of facilities and links, so it should be fine to loop through all pairwise."
    ]
   },
   {
@@ -451,10 +456,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "facility_file = [\n",
-    "    \"facilities_within_reach_100.gpkg\",\n",
-    "    \"facilities_outside_reach_100.gpkg\",\n",
-    "]"
+    "poi_files = {\n",
+    "    \"facility\": [\n",
+    "        \"facilities_within_reach_100.gpkg\",\n",
+    "        \"facilities_outside_reach_100.gpkg\",\n",
+    "    ],\n",
+    "    \"service\": [\n",
+    "        \"service_within_reach_500.gpkg\",\n",
+    "        \"service_outside_reach_500.gpkg\",\n",
+    "    ],\n",
+    "    \"attraction\": [\"pois_within_reach_1000.gpkg\", \"pois_outside_reach_1000.gpkg\"],\n",
+    "}"
    ]
   },
   {
@@ -466,26 +478,45 @@
    "source": [
     "for e in G.es:\n",
     "    e[\"has_water\"] = False\n",
+    "    e[\"has_facility\"] = False\n",
+    "    e[\"has_service\"] = False\n",
+    "    e[\"has_attraction\"] = False\n",
+    "    e[\"poi_diversity\"] = 0\n",
+    "\n",
+    "e_haspoi = {\"facility\": set(), \"service\": set(), \"attraction\": set()}\n",
+    "for cat in [*poi_files]:\n",
+    "    for f in poi_files[cat]:\n",
+    "        pois = gpd.read_file(PATH[\"data_in_pois\"] + f)\n",
+    "        for _, poirow in pois.iterrows():\n",
+    "            d = 999999999999\n",
+    "            eid = False\n",
+    "            if poirow[\"type\"]:  # Could add conditions on type later, like Vandpost\n",
+    "                poi_this = poirow[\"geometry\"]\n",
+    "                for eindex, erow in edges_orig.iterrows():\n",
+    "                    d_this = poi_this.distance(erow[\"geometry\"])\n",
+    "                    if d_this < d and erow[\"edge_id\"] in edges_orig[\"edge_id\"].values:\n",
+    "                        d = d_this\n",
+    "                        eid = erow[\"edge_id\"]\n",
+    "            if eid and d <= snap_threshold:\n",
+    "                e_haspoi[cat].add(eid)\n",
     "\n",
     "e_haswater = set()\n",
-    "for f in [\"facilities_within_reach_100.gpkg\", \"facilities_outside_reach_100.gpkg\"]:\n",
-    "    facilities = gpd.read_file(PATH[\"data_in_pois\"] + f)\n",
-    "    for findex, frow in facilities.iterrows():\n",
-    "        d = 999999999999\n",
-    "        eid = False\n",
-    "        if frow[\"type\"]:  # Can add conditions on type later\n",
-    "            poi_this = frow[\"geometry\"]\n",
-    "            for eindex, erow in edges_orig.iterrows():\n",
-    "                d_this = poi_this.distance(erow[\"geometry\"])\n",
-    "                if d_this < d and erow[\"edge_id\"] in edges_orig[\"edge_id\"].values:\n",
-    "                    d = d_this\n",
-    "                    eid = erow[\"edge_id\"]\n",
-    "        if eid and d <= snap_threshold:\n",
-    "            e_haswater.add(eid)\n",
+    "e_haswater = e_haspoi[\"facility\"] | e_haspoi[\"service\"] | e_haspoi[\"attraction\"]\n",
     "\n",
     "for e in G.es:\n",
+    "    poi_diversity = 0\n",
     "    if e[\"edge_id\"] in e_haswater:\n",
-    "        e[\"has_water\"] = True"
+    "        e[\"has_water\"] = True\n",
+    "    if e[\"edge_id\"] in e_haspoi[\"facility\"]:\n",
+    "        e[\"has_facility\"] = True\n",
+    "        poi_diversity += 1\n",
+    "    if e[\"edge_id\"] in e_haspoi[\"service\"]:\n",
+    "        e[\"has_service\"] = True\n",
+    "        poi_diversity += 1\n",
+    "    if e[\"edge_id\"] in e_haspoi[\"attraction\"]:\n",
+    "        e[\"has_attraction\"] = True\n",
+    "        poi_diversity += 1\n",
+    "    e[\"poi_diversity\"] = poi_diversity"
    ]
   },
   {
@@ -519,8 +550,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5ccd77d-bc5e-4ce1-8263-819b604f6543",
+   "id": "35380966-acfc-4870-837d-a2e9a3a6003f",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "edge_widths = []\n",
+    "for e in G.es:\n",
+    "    edge_widths.append(e[\"poi_diversity\"] + 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed0f33c1-2479-4fad-b7d6-09ec1863e298",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plotCheck(G, nodes_id, nodes_coords, vertex_size=7, edge_width=edge_widths)\n",
+    "plt.text(0, 0.04, \"POI diversity\")\n",
+    "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5ccd77d-bc5e-4ce1-8263-819b604f6543",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "fig = plotCheck(G, nodes_id, nodes_coords, vertex_size=7, edge_color=edge_colors)\n",
