Add POI diversity restriction

--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -556,7 +556,7 @@
    "source": [
     "edge_widths = []\n",
     "for e in G.es:\n",
-    "    edge_widths.append(e[\"poi_diversity\"] + 1)"
+    "    edge_widths.append((e[\"poi_diversity\"] * 2) + 0.25)"
    ]
   },
   {
@@ -715,6 +715,7 @@
     "    c_length = getLoopLength(c)\n",
     "    c_max_slope = getLoopMaxSlope(c)\n",
     "    c_water = getLoopWaterProfile(c)\n",
+    "    c_poi_diversity = getLoopPOIDiversity(c)\n",
     "    numloops_unique += 1\n",
     "    if sourcenode in nodes_done:\n",
     "        allloops_unique[sourcenode][\"loops\"].append(c)\n",
@@ -722,6 +723,7 @@
     "        allloops_unique[sourcenode][\"numnodes\"].append(len(c))\n",
     "        allloops_unique[sourcenode][\"max_slopes\"].append(c_max_slope)\n",
     "        allloops_unique[sourcenode][\"water_profile\"].append(c_water)\n",
+    "        allloops_unique[sourcenode][\"poi_diversity\"].append(c_poi_diversity)\n",
     "    else:\n",
     "        allloops_unique[sourcenode] = {\n",
     "            \"loops\": [c],\n",
@@ -729,6 +731,7 @@
     "            \"numnodes\": [len(c)],\n",
     "            \"max_slopes\": [c_max_slope],\n",
     "            \"water_profile\": [c_water],\n",
+    "            \"poi_diversity\": [c_poi_diversity],\n",
     "        }\n",
     "        nodes_done.add(sourcenode)\n",
     "print(\n",
@@ -756,6 +759,7 @@
     "    c_length = getLoopLength(c)\n",
     "    c_max_slope = getLoopMaxSlope(c)\n",
     "    c_water = getLoopWaterProfile(c)\n",
+    "    c_poi_diversity = getLoopPOIDiversity(c)\n",
     "    for sourcenode in c:\n",
     "        numloops += 1\n",
     "        if sourcenode in nodes_done:\n",
@@ -764,6 +768,7 @@
     "            allloops[sourcenode][\"numnodes\"].append(len(c))\n",
     "            allloops[sourcenode][\"max_slopes\"].append(c_max_slope)\n",
     "            allloops[sourcenode][\"water_profile\"].append(c_water)\n",
+    "            allloops[sourcenode][\"poi_diversity\"].append(c_poi_diversity)\n",
     "        else:\n",
     "            allloops[sourcenode] = {\n",
     "                \"loops\": [c],\n",
@@ -771,6 +776,7 @@
     "                \"numnodes\": [len(c)],\n",
     "                \"max_slopes\": [c_max_slope],\n",
     "                \"water_profile\": [c_water],\n",
+    "                \"poi_diversity\": [c_poi_diversity],\n",
     "            }\n",
     "            nodes_done.add(sourcenode)\n",
     "print(\"Found \" + str(numloops) + \" loops for length bound \" + str(loop_numnode_bound))"
