--- a/code/02_explore_loops.ipynb
+++ b/code/02_explore_loops.ipynb
@@ -29,7 +29,7 @@
    "source": [
     "## To do\n",
     "- [ ] Kommune cohesion: Loops vs distance to boundary\n",
-    "- [ ] POI analysis"
+    "- [X] POI analysis"
    ]
   },
   {
@@ -48,7 +48,7 @@
    "outputs": [],
    "source": [
     "loop_numnode_bound = 30\n",
-    "scenario = \"scenario1\"\n",
+    "scenario = \"scenario2\"\n",
     "\n",
     "restrictions = {\n",
     "    \"scenario1\": {  # family with small children\n",
@@ -223,6 +223,9 @@
     "        \"water_profile\": list(\n",
     "            compress(allloops[sourcenode][\"water_profile\"], mask_this)\n",
     "        ),\n",
+    "        \"poi_diversity\": list(\n",
+    "            compress(allloops[sourcenode][\"poi_diversity\"], mask_this)\n",
+    "        ),\n",
     "    }"
    ]
   },
@@ -296,6 +299,9 @@
     "        \"numnodes\": list(compress(allloops[sourcenode][\"numnodes\"], mask_this)),\n",
     "        \"water_profile\": list(\n",
     "            compress(allloops[sourcenode][\"water_profile\"], mask_this)\n",
+    "        ),\n",
+    "        \"poi_diversity\": list(\n",
+    "            compress(allloops[sourcenode][\"poi_diversity\"], mask_this)\n",
     "        ),\n",
     "    }"
    ]
@@ -372,7 +378,7 @@
    "id": "ccef1cf2-5799-4462-8449-08e573ee1bce",
    "metadata": {},
    "source": [
-    "### Restrict to POI limits"
+    "### Restrict to water limits"
    ]
   },
   {
@@ -413,6 +419,9 @@
     "        \"water_profile\": list(\n",
     "            compress(allloops_bound[sourcenode][\"water_profile\"], mask_this)\n",
     "        ),\n",
+    "        \"poi_diversity\": list(\n",
+    "            compress(allloops_bound[sourcenode][\"poi_diversity\"], mask_this)\n",
+    "        ),\n",
     "    }"
    ]
   },
@@ -424,7 +433,8 @@
    "outputs": [],
    "source": [
     "vertex_sizes = [\n",
-    "    len(allloops_bound_watered[k][\"loops\"]) for k in range(len(allloops_bound.keys()))\n",
+    "    len(allloops_bound_watered[k][\"loops\"])\n",
+    "    for k in range(len(allloops_bound_watered.keys()))\n",
     "]\n",
     "numloops_max = max(vertex_sizes)\n",
     "vertex_sizes = [i / (numloops_max / 20) for i in vertex_sizes]"
@@ -495,6 +505,136 @@
     "    + str(restrictions[scenario][\"maxslope\"])\n",
     "    + \"_waterlengthmax\"\n",
     "    + str(restrictions[scenario][\"waterlengthmax\"])\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b52a724-7265-4329-ba10-ba1641f1016a",
+   "metadata": {},
+   "source": [
+    "## Restrict with POI diversity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1aa2a94a-1746-4598-bd74-acda903c2260",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "allloops_bound_watered_diverse = {}\n",
+    "for sourcenode in allloops_bound_watered:\n",
+    "    numloops = len(allloops_bound_watered[sourcenode][\"loops\"])\n",
+    "    mask_this = [False] * numloops\n",
+    "    for i in range(numloops):\n",
+    "        pd = allloops_bound_watered[sourcenode][\"poi_diversity\"][i]\n",
+    "        if pd >= 3:\n",
+    "            mask_this[i] = True\n",
+    "    allloops_bound_watered_diverse[sourcenode] = {\n",
+    "        \"loops\": list(compress(allloops_bound_watered[sourcenode][\"loops\"], mask_this)),\n",
+    "        \"lengths\": list(\n",
+    "            compress(allloops_bound_watered[sourcenode][\"lengths\"], mask_this)\n",
+    "        ),\n",
+    "        \"numnodes\": list(\n",
+    "            compress(allloops_bound_watered[sourcenode][\"numnodes\"], mask_this)\n",
+    "        ),\n",
+    "        \"water_profile\": list(\n",
+    "            compress(allloops_bound_watered[sourcenode][\"water_profile\"], mask_this)\n",
+    "        ),\n",
+    "        \"poi_diversity\": list(\n",
+    "            compress(allloops_bound_watered[sourcenode][\"poi_diversity\"], mask_this)\n",
+    "        ),\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c7b20e5-a371-4219-9bda-2a7e485c7d42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vertex_sizes = [\n",
+    "    len(allloops_bound_watered_diverse[k][\"loops\"])\n",
+    "    for k in range(len(allloops_bound_watered_diverse.keys()))\n",
+    "]\n",
+    "numloops_max = max(vertex_sizes)\n",
+    "vertex_sizes = [i / (numloops_max / 20) for i in vertex_sizes]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9d32b9f-2b75-44c4-b7b7-1d2f288133b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edge_colors = []\n",
+    "for e in G.es:\n",
+    "    if e[\"max_slope\"] > restrictions[scenario][\"maxslope\"]:  # and not e[\"has_water\"]:\n",
+    "        edge_colors.append(\"red\")\n",
+    "    # elif e[\"max_slope\"] > restrictions[scenario][\"maxslope\"] and e[\"has_water\"]:\n",
+    "    #     edge_colors.append(\"orange\")\n",
+    "    elif (\n",
+    "        e[\"max_slope\"] <= restrictions[scenario][\"maxslope\"]\n",
+    "        and e[\"has_water\"]\n",
+    "        and e[\"poi_diversity\"] >= 3\n",
+    "    ):\n",
+    "        edge_colors.append(\"blue\")\n",
+    "    else:\n",
+    "        edge_colors.append(\"grey\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d90468a-ecc3-4a4c-b38f-7ea0c0db3feb",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "fig = plotCheck(\n",
+    "    G, nodes_id, nodes_coords, vertex_size=vertex_sizes, edge_color=edge_colors\n",
+    ")\n",
+    "plt.text(\n",
+    "    0,\n",
+    "    0.17,\n",
+    "    \"Blue: Gradient <=\"\n",
+    "    + str(restrictions[scenario][\"maxslope\"])\n",
+    "    + \"% and water and diverse\",\n",
+    "    fontsize=8,\n",
+    ")\n",
+    "# plt.text(0,0.17, \"Orange: Gradient >\"+ str(restrictions[scenario][\"maxslope\"])+\"% and water\", fontsize=8);\n",
+    "plt.text(\n",
+    "    0,\n",
+    "    0.12,\n",
+    "    \"Red: Gradient >\" + str(restrictions[scenario][\"maxslope\"]) + \"%\",\n",
+    "    fontsize=8,\n",
+    ")\n",
+    "plt.text(0, 0.04, \"Max # of loops: \" + str(numloops_max))\n",
+    "plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d2b5c78-3641-4dab-88a7-b0bb6d889498",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig.savefig(\n",
+    "    PATH[\"plot\"]\n",
+    "    + \"network_numloops_\"\n",
+    "    + str(restrictions[scenario][\"looplengthmin\"])\n",
+    "    + \"to\"\n",
+    "    + str(restrictions[scenario][\"looplengthmax\"])\n",
+    "    + \"_maxslope\"\n",
+    "    + str(restrictions[scenario][\"maxslope\"])\n",
+    "    + \"_waterlengthmax\"\n",
+    "    + str(restrictions[scenario][\"waterlengthmax\"])\n",
+    "    + \"_poidiversity3\"\n",
     ")"
    ]
   }
