Refactor with config.yml and setup_parameters.py
- Add new faxebig study area
- Ignore all new data

--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -19,7 +19,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-01-24  \n",
-    "Last modified: 2024-05-24  "
+    "Last modified: 2024-07-11  "
    ]
   },
   {
@@ -48,42 +48,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c3308b0",
-   "metadata": {},
-   "source": [
-    "## Parameters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d06672f1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "loop_numnode_bound = 30  # From 30 it starts getting slow\n",
-    "faceloop_limit = [  # 90% of face loop lengths should conform to these length limits [m]\n",
-    "    8000,\n",
-    "    20000,\n",
-    "]\n",
-    "link_limit = [  # Optimal length between first and second value, maximal length the last value [m]\n",
-    "    1000,\n",
-    "    5000,\n",
-    "    10000,\n",
-    "]\n",
-    "maxslope_limit = 6  # Maximum gradient [%]\n",
-    "snap_threshold = 250  # Threshold to snap POIs to network links [m]\n",
-    "\n",
-    "PATH = {\n",
-    "    \"data_in_network\": \"../data/input/faxe/network/\",\n",
-    "    \"data_in_pois\": \"../data/input/faxe/pois/\",\n",
-    "    \"data_out\": \"../data/processed/faxe/\",\n",
-    "    \"plot\": \"../plots/faxe/\",\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "5d0a7b7f",
    "metadata": {},
    "source": [
@@ -92,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f81d35c7",
    "metadata": {},
    "outputs": [],
@@ -104,6 +68,24 @@
     "import networkx as nx\n",
     "from functools import reduce\n",
     "import pickle"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d22412b-3d1f-4203-bbc4-4629f35c0c06",
+   "metadata": {},
+   "source": [
+    "## Parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f3f65809-7982-4af5-8ac0-74adc0c05ac8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run -i setup_parameters.py"
    ]
   },
   {
