--- a/code/02_explore_loops.ipynb
+++ b/code/02_explore_loops.ipynb
@@ -19,7 +19,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-01-29  \n",
-    "Last modified: 2024-05-24  "
+    "Last modified: 2024-07-11  "
    ]
   },
   {
@@ -28,49 +28,8 @@
    "metadata": {},
    "source": [
     "## To do\n",
-    "- [ ] Kommune cohesion: Loops vs distance to boundary\n",
+    "- [ ] Kommune cohesion: Loops vs distance to nearest kommune\n",
     "- [X] POI analysis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7c3308b0",
-   "metadata": {},
-   "source": [
-    "## Parameters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d06672f1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "loop_numnode_bound = 30\n",
-    "scenario = \"scenario2\"\n",
-    "\n",
-    "restrictions = {\n",
-    "    \"scenario1\": {  # family with small children\n",
-    "        \"looplengthmin\": 5000,\n",
-    "        \"looplengthmax\": 20000,\n",
-    "        \"maxslope\": 4,\n",
-    "        \"waterlengthmax\": 10000,\n",
-    "    },\n",
-    "    \"scenario2\": {  # teenage/adult leisure cyclist\n",
-    "        \"looplengthmin\": 10000,\n",
-    "        \"looplengthmax\": 40000,\n",
-    "        \"maxslope\": 6,\n",
-    "        \"waterlengthmax\": 10000,\n",
-    "    },\n",
-    "}\n",
-    "\n",
-    "PATH = {\n",
-    "    \"data_in_network\": \"../data/input/faxe/network/\",\n",
-    "    \"data_in_pois\": \"../data/input/faxe/pois/\",\n",
-    "    \"data_out\": \"../data/processed/faxe/\",\n",
-    "    \"plot\": \"../plots/faxe/\",\n",
-    "}"
    ]
   },
   {
@@ -93,6 +52,24 @@
     "import igraph as ig\n",
     "import pickle\n",
     "from itertools import compress"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "816924f7-7ddc-44a1-bcd7-fbf203a41b1d",
+   "metadata": {},
+   "source": [
+    "## Parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb810d3b-192d-47d8-8d62-d699be65bcad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run -i setup_parameters.py"
    ]
   },
   {
@@ -213,8 +190,8 @@
     "allloops_bound = {}\n",
     "for sourcenode in allloops:\n",
     "    this_lengths = np.array(allloops[sourcenode][\"lengths\"])\n",
-    "    mask_this = (this_lengths >= restrictions[scenario][\"looplengthmin\"]) & (\n",
-    "        this_lengths <= restrictions[scenario][\"looplengthmax\"]\n",
+    "    mask_this = (this_lengths >= restrictions[\"looplength_min\"]) & (\n",
+    "        this_lengths <= restrictions[\"looplength_max\"]\n",
     "    )\n",
     "    allloops_bound[sourcenode] = {\n",
     "        \"loops\": list(compress(allloops[sourcenode][\"loops\"], mask_this)),\n",
@@ -265,9 +242,9 @@
     "fig.savefig(\n",
     "    PATH[\"plot\"]\n",
     "    + \"network_numloops_\"\n",
-    "    + str(restrictions[scenario][\"looplengthmin\"])\n",
+    "    + str(restrictions[\"looplength_min\"])\n",
     "    + \"to\"\n",
-    "    + str(restrictions[scenario][\"looplengthmax\"])\n",
+    "    + str(restrictions[\"looplength_max\"])\n",
     ")"
    ]
   },
@@ -290,9 +267,9 @@
     "for sourcenode in allloops:\n",
     "    this_lengths = np.array(allloops[sourcenode][\"lengths\"])\n",
     "    this_maxslopes = np.array(allloops[sourcenode][\"max_slopes\"])\n",
-    "    mask_this = this_lengths >= restrictions[scenario][\"looplengthmin\"]\n",
-    "    mask_this &= this_lengths <= restrictions[scenario][\"looplengthmax\"]\n",
-    "    mask_this &= this_maxslopes <= restrictions[scenario][\"maxslope\"]\n",
+    "    mask_this = this_lengths >= restrictions[\"looplength_min\"]\n",
+    "    mask_this &= this_lengths <= restrictions[\"looplength_max\"]\n",
+    "    mask_this &= this_maxslopes <= restrictions[\"slope_max\"]\n",
     "    allloops_bound[sourcenode] = {\n",
     "        \"loops\": list(compress(allloops[sourcenode][\"loops\"], mask_this)),\n",
     "        \"lengths\": list(compress(allloops[sourcenode][\"lengths\"], mask_this)),\n",
@@ -329,7 +306,7 @@
    "source": [
     "edge_colors = []\n",
     "for e in G.es:\n",
-    "    if e[\"max_slope\"] > restrictions[scenario][\"maxslope\"]:\n",
+    "    if e[\"max_slope\"] > restrictions[\"slope_max\"]:\n",
     "        edge_colors.append(\"red\")\n",
     "    else:\n",
     "        edge_colors.append(\"grey\")"
@@ -348,7 +325,7 @@
     "plt.text(\n",
     "    0,\n",
     "    0.12,\n",
-    "    \"Red: Gradient >\" + str(restrictions[scenario][\"maxslope\"]) + \"%\",\n",
+    "    \"Red: Gradient >\" + str(restrictions[\"slope_max\"]) + \"%\",\n",
     "    fontsize=8,\n",
     ")\n",
     "plt.text(0, 0.04, \"Max # of loops: \" + str(numloops_max))\n",
@@ -365,11 +342,11 @@
     "fig.savefig(\n",
     "    PATH[\"plot\"]\n",
     "    + \"network_numloops_\"\n",
-    "    + str(restrictions[scenario][\"looplengthmin\"])\n",
+    "    + str(restrictions[\"looplength_min\"])\n",
     "    + \"to\"\n",
-    "    + str(restrictions[scenario][\"looplengthmax\"])\n",
+    "    + str(restrictions[\"looplength_max\"])\n",
     "    + \"_maxslope\"\n",
-    "    + str(restrictions[scenario][\"maxslope\"])\n",
+    "    + str(restrictions[\"slope_max\"])\n",
     ")"
    ]
   },
@@ -397,18 +374,18 @@
     "        water_enough = True\n",
     "        if wp:  # There is water on the way somewhere. Check distances\n",
     "            for w in wp:\n",
-    "                if w > restrictions[scenario][\"waterlengthmax\"]:\n",
+    "                if w > restrictions[\"waterlength_max\"]:\n",
     "                    water_enough = False\n",
     "                    break\n",
     "            if water_enough and (\n",
     "                allloops_bound[sourcenode][\"lengths\"][i] - wp[-1]\n",
-    "                > restrictions[scenario][\"waterlengthmax\"]\n",
+    "                > restrictions[\"waterlength_max\"]\n",
     "            ):\n",
     "                water_enough = False\n",
     "        else:  # No water on the way, so the loop is only valid if short enough\n",
     "            if (\n",
     "                allloops_bound[sourcenode][\"lengths\"][i]\n",
-    "                > restrictions[scenario][\"waterlengthmax\"]\n",
+    "                > restrictions[\"waterlength_max\"]\n",
     "            ):\n",
     "                water_enough = False\n",
     "        mask_this[i] = water_enough\n",
@@ -449,11 +426,11 @@
    "source": [
     "edge_colors = []\n",
     "for e in G.es:\n",
-    "    if e[\"max_slope\"] > restrictions[scenario][\"maxslope\"]:  # and not e[\"has_water\"]:\n",
+    "    if e[\"max_slope\"] > restrictions[\"slope_max\"]:  # and not e[\"has_water\"]:\n",
     "        edge_colors.append(\"red\")\n",
-    "    # elif e[\"max_slope\"] > restrictions[scenario][\"maxslope\"] and e[\"has_water\"]:\n",
+    "    # elif e[\"max_slope\"] > restrictions[\"slope_max\"] and e[\"has_water\"]:\n",
     "    #     edge_colors.append(\"orange\")\n",
-    "    elif e[\"max_slope\"] <= restrictions[scenario][\"maxslope\"] and e[\"has_water\"]:\n",
+    "    elif e[\"max_slope\"] <= restrictions[\"slope_max\"] and e[\"has_water\"]:\n",
     "        edge_colors.append(\"blue\")\n",
     "    else:\n",
     "        edge_colors.append(\"grey\")"
@@ -472,14 +449,14 @@
     "plt.text(\n",
     "    0,\n",
     "    0.17,\n",
-    "    \"Blue: Gradient <=\" + str(restrictions[scenario][\"maxslope\"]) + \"% and water\",\n",
+    "    \"Blue: Gradient <=\" + str(restrictions[\"slope_max\"]) + \"% and water\",\n",
     "    fontsize=8,\n",
     ")\n",
-    "# plt.text(0,0.17, \"Orange: Gradient >\"+ str(restrictions[scenario][\"maxslope\"])+\"% and water\", fontsize=8);\n",
+    "# plt.text(0,0.17, \"Orange: Gradient >\"+ str(restrictions[\"slope_max\"])+\"% and water\", fontsize=8);\n",
     "plt.text(\n",
     "    0,\n",
     "    0.12,\n",
-    "    \"Red: Gradient >\" + str(restrictions[scenario][\"maxslope\"]) + \"%\",\n",
+    "    \"Red: Gradient >\" + str(restrictions[\"slope_max\"]) + \"%\",\n",
     "    fontsize=8,\n",
     ")\n",
     "plt.text(0, 0.04, \"Max # of loops: \" + str(numloops_max))\n",
@@ -498,13 +475,13 @@
     "fig.savefig(\n",
     "    PATH[\"plot\"]\n",
     "    + \"network_numloops_\"\n",
-    "    + str(restrictions[scenario][\"looplengthmin\"])\n",
+    "    + str(restrictions[\"looplength_min\"])\n",
     "    + \"to\"\n",
-    "    + str(restrictions[scenario][\"looplengthmax\"])\n",
+    "    + str(restrictions[\"looplength_max\"])\n",
     "    + \"_maxslope\"\n",
-    "    + str(restrictions[scenario][\"maxslope\"])\n",
-    "    + \"_waterlengthmax\"\n",
-    "    + str(restrictions[scenario][\"waterlengthmax\"])\n",
+    "    + str(restrictions[\"slope_max\"])\n",
+    "    + \"_waterlength_max\"\n",
+    "    + str(restrictions[\"waterlength_max\"])\n",
     ")"
    ]
   },
@@ -572,12 +549,12 @@
    "source": [
     "edge_colors = []\n",
     "for e in G.es:\n",
-    "    if e[\"max_slope\"] > restrictions[scenario][\"maxslope\"]:  # and not e[\"has_water\"]:\n",
+    "    if e[\"max_slope\"] > restrictions[\"slope_max\"]:  # and not e[\"has_water\"]:\n",
     "        edge_colors.append(\"red\")\n",
-    "    # elif e[\"max_slope\"] > restrictions[scenario][\"maxslope\"] and e[\"has_water\"]:\n",
+    "    # elif e[\"max_slope\"] > restrictions[\"slope_max\"] and e[\"has_water\"]:\n",
     "    #     edge_colors.append(\"orange\")\n",
     "    elif (\n",
-    "        e[\"max_slope\"] <= restrictions[scenario][\"maxslope\"]\n",
+    "        e[\"max_slope\"] <= restrictions[\"slope_max\"]\n",
     "        and e[\"has_water\"]\n",
     "        and e[\"poi_diversity\"] >= 3\n",
     "    ):\n",
@@ -601,16 +578,14 @@
     "plt.text(\n",
     "    0,\n",
     "    0.17,\n",
-    "    \"Blue: Gradient <=\"\n",
-    "    + str(restrictions[scenario][\"maxslope\"])\n",
-    "    + \"% and water and diverse\",\n",
+    "    \"Blue: Gradient <=\" + str(restrictions[\"slope_max\"]) + \"% and water and diverse\",\n",
     "    fontsize=8,\n",
     ")\n",
-    "# plt.text(0,0.17, \"Orange: Gradient >\"+ str(restrictions[scenario][\"maxslope\"])+\"% and water\", fontsize=8);\n",
+    "# plt.text(0,0.17, \"Orange: Gradient >\"+ str(restrictions[\"slope_max\"])+\"% and water\", fontsize=8);\n",
     "plt.text(\n",
     "    0,\n",
     "    0.12,\n",
-    "    \"Red: Gradient >\" + str(restrictions[scenario][\"maxslope\"]) + \"%\",\n",
+    "    \"Red: Gradient >\" + str(restrictions[\"slope_max\"]) + \"%\",\n",
     "    fontsize=8,\n",
     ")\n",
     "plt.text(0, 0.04, \"Max # of loops: \" + str(numloops_max))\n",
@@ -627,13 +602,13 @@
     "fig.savefig(\n",
     "    PATH[\"plot\"]\n",
     "    + \"network_numloops_\"\n",
-    "    + str(restrictions[scenario][\"looplengthmin\"])\n",
+    "    + str(restrictions[\"looplength_min\"])\n",
     "    + \"to\"\n",
-    "    + str(restrictions[scenario][\"looplengthmax\"])\n",
+    "    + str(restrictions[\"looplength_max\"])\n",
     "    + \"_maxslope\"\n",
-    "    + str(restrictions[scenario][\"maxslope\"])\n",
-    "    + \"_waterlengthmax\"\n",
-    "    + str(restrictions[scenario][\"waterlengthmax\"])\n",
+    "    + str(restrictions[\"slope_max\"])\n",
+    "    + \"_waterlength_max\"\n",
+    "    + str(restrictions[\"waterlength_max\"])\n",
     "    + \"_poidiversity3\"\n",
     ")"
    ]
