Add more graph pruning
Tested with Fyn:
- Drop na edges
- Take only largest connected component
- Re-drop dangling nodes

--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -19,7 +19,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-01-24  \n",
-    "Last modified: 2024-07-11  "
+    "Last modified: 2024-09-10  "
    ]
   },
   {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "f81d35c7",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f3f65809-7982-4af5-8ac0-74adc0c05ac8",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
    "source": [
     "edges = gpd.read_file(PATH[\"data_in_network\"] + \"edges_slope.gpkg\")\n",
     "edges_orig = edges  # Make a deep copy to save the geometries\n",
-    "nodes = gpd.read_file(PATH[\"data_in_network\"] + \"nodes_edges_parallel.gpkg\")\n",
+    "nodes = gpd.read_file(PATH[\"data_in_network\"] + \"nodes.gpkg\")\n",
     "# Set CRS\n",
     "edges.set_crs(\"epsg:25832\")\n",
     "nodes.set_crs(\"epsg:25832\");"
@@ -150,21 +150,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "111873d6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nodes.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "39e4ccb8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nodes_id = list(nodes.id)\n",
+    "nodes_id = list(nodes.node_id)\n",
     "nodes_x = list(nodes.geometry.x)\n",
     "nodes_y = list(nodes.geometry.y)\n",
     "nodes_coords = list(zip(NormalizeData(nodes_x), NormalizeData(nodes_y)))"
@@ -187,6 +177,7 @@
     "\n",
     "# Reorder columns\n",
     "edges = edges[[\"u\", \"v\", \"weight\", \"max_slope\", \"edge_id\"]]\n",
+    "edges = edges.dropna()  # Drop edges with None u or v\n",
     "edges"
    ]
   },
@@ -227,6 +218,40 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "ef36979d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot to double-check\n",
+    "plotCheck(G, nodes_id, nodes_coords);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b549b7af-6f85-4ac7-a3e4-e9c85b8c77c0",
+   "metadata": {},
+   "source": [
+    "### Take largest connected component"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c76d511-76b0-4e7d-b0fc-6e9de91aa186",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "components = G.connected_components()\n",
+    "memberships = np.unique(components.membership, return_counts=True)\n",
+    "index_gcc = memberships[0][\n",
+    "    memberships[1].argmax(axis=0)\n",
+    "]  # get index of component with most nodes\n",
+    "G = G.subgraph(components[index_gcc])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11b9b86f-2db0-4393-9522-2e41a2348b95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +410,7 @@
     "G.simplify(\n",
     "    multiple=True,\n",
     "    loops=True,\n",
-    "    combine_edges=dict(weight=min, max_slope=max, edge_id=min),\n",
+    "    combine_edges=dict(weight=min, max_slope=max),\n",
     ");"
    ]
   },
@@ -394,8 +419,51 @@
    "execution_count": null,
    "id": "5ccfbc29",
    "metadata": {
+    "scrolled": true,
     "tags": []
    },
+   "outputs": [],
+   "source": [
+    "# Plot to double-check\n",
+    "plotCheck(G, nodes_id, nodes_coords);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b44a824b-4a5a-44ad-800c-93630890802a",
+   "metadata": {},
+   "source": [
+    "### Re-Drop dangling nodes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4e9cb2b-f788-4ecb-9432-3d0b7da033ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Source: https://codereview.stackexchange.com/questions/284246/deletion-of-nodes-of-degree-1-from-a-python-igraph-graph\n",
+    "vertices = {v for v in G.vs.select(_degree_le=1)}\n",
+    "needs_to_be_checked = set(vertices)\n",
+    "while needs_to_be_checked:\n",
+    "    vertex = needs_to_be_checked.pop()\n",
+    "    for n_vertex in vertex.neighbors():\n",
+    "        if (\n",
+    "            n_vertex in vertices\n",
+    "            or sum(1 for v in n_vertex.neighbors() if v not in vertices) > 1\n",
+    "        ):\n",
+    "            continue\n",
+    "        vertices.add(n_vertex)\n",
+    "        needs_to_be_checked.add(n_vertex)\n",
+    "G.delete_vertices(vertices)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0d742ef-4b25-45ad-9f3a-eb885aad006a",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Plot to double-check\n",
@@ -448,6 +516,24 @@
     "        \"service_outside_reach_500.gpkg\",\n",
     "    ],\n",
     "    \"attraction\": [\"pois_within_reach_1000.gpkg\", \"pois_outside_reach_1000.gpkg\"],\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3ab9e5d-4019-4c9e-9744-6d727e14fd3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "poi_files = {\n",
+    "    \"facility\": [\n",
+    "        \"facility.gpkg\",\n",
+    "    ],\n",
+    "    \"service\": [\n",
+    "        \"service.gpkg\",\n",
+    "    ],\n",
+    "    \"attraction\": [\"poi.gpkg\"],\n",
     "}"
    ]
   },
