Add tqdm progress bars
- Drop edges without edgeid
- Re-take largest connected component
- Add first Fyn results on descriptive network statistics

--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -403,14 +403,19 @@
     "            weight=sumoflengths,\n",
     "            max_slope=maxofslopes,\n",
     "        )\n",
-    "\n",
     "G.delete_vertices(to_delete_ids)\n",
+    "\n",
+    "to_delete_ids = []\n",
+    "for e in G.es:\n",
+    "    if e[\"edge_id\"] is None:\n",
+    "        to_delete_ids.append(e.index)\n",
+    "G.delete_edges(to_delete_ids)\n",
     "\n",
     "# Re-simplify\n",
     "G.simplify(\n",
     "    multiple=True,\n",
     "    loops=True,\n",
-    "    combine_edges=dict(weight=min, max_slope=max),\n",
+    "    combine_edges=dict(weight=min, max_slope=max, edge_id=min),\n",
     ");"
    ]
   },
@@ -463,6 +468,42 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e0d742ef-4b25-45ad-9f3a-eb885aad006a",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# Plot to double-check\n",
+    "plotCheck(G, nodes_id, nodes_coords);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "411253c5-84ec-4c27-8203-f07c4776a9ae",
+   "metadata": {},
+   "source": [
+    "### Re-take largest connected component"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0387af53-f36f-4822-82e6-974c9b2c94c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "components = G.connected_components()\n",
+    "memberships = np.unique(components.membership, return_counts=True)\n",
+    "index_gcc = memberships[0][\n",
+    "    memberships[1].argmax(axis=0)\n",
+    "]  # get index of component with most nodes\n",
+    "G = G.subgraph(components[index_gcc])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a308c45-ac19-46ad-8dfc-fab90eb388f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,8 +595,9 @@
     "e_haspoi = {\"facility\": set(), \"service\": set(), \"attraction\": set()}\n",
     "for cat in [*poi_files]:\n",
     "    for f in poi_files[cat]:\n",
+    "        print(\"Adding POIs from file: \" + f)\n",
     "        pois = gpd.read_file(PATH[\"data_in_pois\"] + f)\n",
-    "        for _, poirow in pois.iterrows():\n",
+    "        for _, poirow in tqdm(pois.iterrows(), total=pois.shape[0]):\n",
     "            d = 999999999999\n",
     "            eid = False\n",
     "            if poirow[\"type\"]:  # Could add conditions on type later, like Vandpost\n",
@@ -712,7 +754,7 @@
     "    0,\n",
     "    0.04,\n",
     "    \"Longest face loop highlighted: \"\n",
-    "    + str(int(loopbasis[max(loopbasis.keys())][\"length\"] / 1000))\n",
+    "    + str(int(loopbasis[max(loopbasis.keys())][\"length\"]))\n",
     "    + \"km\",\n",
     ")\n",
     "plt.tight_layout()"
@@ -778,7 +820,7 @@
     "nodes_done = set()\n",
     "numloops_unique = 0\n",
     "allloops_generator = nx.simple_cycles(Gnx, length_bound=loop_numnode_bound)\n",
-    "for c in allloops_generator:\n",
+    "for c in tqdm(allloops_generator):\n",
     "    sourcenode = c[0]\n",
     "    c_length = getLoopLength(c)\n",
     "    c_max_slope = getLoopMaxSlope(c)\n",
@@ -822,7 +864,7 @@
     "nodes_done = set()\n",
     "numloops = 0\n",
     "allloops_generator = nx.simple_cycles(Gnx, length_bound=loop_numnode_bound)\n",
-    "for c in allloops_generator:\n",
+    "for c in tqdm(allloops_generator):\n",
     "    sourcenode = c[0]\n",
     "    c_length = getLoopLength(c)\n",
     "    c_max_slope = getLoopMaxSlope(c)\n",
@@ -861,7 +903,7 @@
     "allloopnumnodes = np.zeros(numloops, dtype=int)\n",
     "allloopmaxslopes = np.zeros(numloops)\n",
     "i = 0\n",
-    "for j in allloops:\n",
+    "for j in tqdm(allloops):\n",
     "    l = len(allloops[j][\"lengths\"])\n",
     "    alllooplengths[i : i + l] = allloops[j][\"lengths\"]\n",
     "    allloopnumnodes[i : i + l] = allloops[j][\"numnodes\"]\n",
@@ -892,7 +934,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "linklengths = [e[\"weight\"] for e in G.es]\n",
+    "linklengths = [e[\"weight\"] * 1000 for e in G.es]\n",
     "linkmaxslopes = [e[\"max_slope\"] for e in G.es]\n",
     "fig = plt.figure(figsize=(8, 3))\n",
     "axes1 = fig.add_axes([0.08, 0.16, 0.4, 0.75])\n",
@@ -1027,7 +1069,7 @@
     "axes2 = fig.add_axes([0.55, 0.1, 0.35, 0.8])\n",
     "\n",
     "axes1.hist(alllooplengths, density=True)\n",
-    "axes1.set_xlabel(\"Length [m]\")\n",
+    "axes1.set_xlabel(\"Length [km]\")\n",
     "axes1.set_ylabel(\"Probability\")\n",
     "axes1.set_title(\"Loop lengths\")\n",
     "\n",
@@ -1053,10 +1095,10 @@
     "axes1 = fig.add_axes([0.08, 0.16, 0.4, 0.75])\n",
     "axes2 = fig.add_axes([0.58, 0.16, 0.4, 0.75])\n",
     "\n",
-    "facelooplengths = [c[\"length\"] for c in loopbasis.values()]\n",
+    "facelooplengths = [c[\"length\"] * 1000 for c in loopbasis.values()]\n",
     "\n",
     "histxy = axes1.hist(facelooplengths, density=False)\n",
-    "axes1.set_xlabel(\"Length [m]\")\n",
+    "axes1.set_xlabel(\"Length [km]\")\n",
     "axes1.set_ylabel(\"Frequency\")\n",
     "axes1.set_title(\"Face loop lengths\")\n",
     "axes1.plot([faceloop_limit[0], faceloop_limit[0]], [0, max(histxy[0])], \":k\")\n",
@@ -1138,7 +1180,10 @@
     "# Show face loops that conform to the length thresholds\n",
     "okedges = set()\n",
     "for c in loopbasis.values():\n",
-    "    if c[\"length\"] >= faceloop_limit[0] and c[\"length\"] <= faceloop_limit[1]:\n",
+    "    if (\n",
+    "        c[\"length\"] * 1000 >= faceloop_limit[0]\n",
+    "        and c[\"length\"] * 1000 <= faceloop_limit[1]\n",
+    "    ):\n",
     "        okedges = okedges.union(set(c[\"edges\"]))\n",
     "\n",
     "edge_colors = []\n",
