Add mperunit parameter
- Make vertex sizes logarithmic
- Add Fyn network results

--- a/code/01_create_loops.ipynb
+++ b/code/01_create_loops.ipynb
@@ -934,7 +934,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "linklengths = [e[\"weight\"] * 1000 for e in G.es]\n",
+    "linklengths = [e[\"weight\"] * mperunit for e in G.es]\n",
     "linkmaxslopes = [e[\"max_slope\"] for e in G.es]\n",
     "fig = plt.figure(figsize=(8, 3))\n",
     "axes1 = fig.add_axes([0.08, 0.16, 0.4, 0.75])\n",
@@ -1095,7 +1095,7 @@
     "axes1 = fig.add_axes([0.08, 0.16, 0.4, 0.75])\n",
     "axes2 = fig.add_axes([0.58, 0.16, 0.4, 0.75])\n",
     "\n",
-    "facelooplengths = [c[\"length\"] * 1000 for c in loopbasis.values()]\n",
+    "facelooplengths = [c[\"length\"] * mperunit for c in loopbasis.values()]\n",
     "\n",
     "histxy = axes1.hist(facelooplengths, density=False)\n",
     "axes1.set_xlabel(\"Length [km]\")\n",
@@ -1181,8 +1181,8 @@
     "okedges = set()\n",
     "for c in loopbasis.values():\n",
     "    if (\n",
-    "        c[\"length\"] * 1000 >= faceloop_limit[0]\n",
-    "        and c[\"length\"] * 1000 <= faceloop_limit[1]\n",
+    "        c[\"length\"] * mperunit >= faceloop_limit[0]\n",
+    "        and c[\"length\"] * mperunit <= faceloop_limit[1]\n",
     "    ):\n",
     "        okedges = okedges.union(set(c[\"edges\"]))\n",
     "\n",
