--- a/code/02_explore_loops.ipynb
+++ b/code/02_explore_loops.ipynb
@@ -19,7 +19,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-01-29  \n",
-    "Last modified: 2024-07-11  "
+    "Last modified: 2024-09-10 "
    ]
   },
   {
@@ -151,7 +151,7 @@
     "axes2 = fig.add_axes([0.55, 0.1, 0.35, 0.8])\n",
     "\n",
     "axes1.hist(alllooplengths, density=True)\n",
-    "axes1.set_xlabel(\"Length [m]\")\n",
+    "axes1.set_xlabel(\"Length [km]\")\n",
     "axes1.set_ylabel(\"Probability\")\n",
     "axes1.set_title(\"Loop lengths\")\n",
     "\n",
@@ -188,8 +188,8 @@
    "outputs": [],
    "source": [
     "allloops_bound = {}\n",
-    "for sourcenode in allloops:\n",
-    "    this_lengths = np.array(allloops[sourcenode][\"lengths\"])\n",
+    "for sourcenode in tqdm(allloops):\n",
+    "    this_lengths = np.array(allloops[sourcenode][\"lengths\"]) * mperunit\n",
     "    mask_this = (this_lengths >= restrictions[\"looplength_min\"]) & (\n",
     "        this_lengths <= restrictions[\"looplength_max\"]\n",
     "    )\n",
@@ -213,9 +213,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vertex_sizes = [\n",
-    "    len(allloops_bound[k][\"loops\"]) for k in range(len(allloops_bound.keys()))\n",
-    "]\n",
+    "vertex_sizes = []\n",
+    "for k in range(len(allloops_bound.keys())):\n",
+    "    try:\n",
+    "        vertex_sizes.append(np.log10(len(allloops_bound[k][\"loops\"]) + 1))\n",
+    "    except:\n",
+    "        vertex_sizes.append(0)\n",
+    "\n",
     "numloops_max = max(vertex_sizes)\n",
     "vertex_sizes = [i / (numloops_max / 20) for i in vertex_sizes]"
    ]
@@ -228,7 +232,7 @@
    "outputs": [],
    "source": [
     "fig = plotCheck(G, nodes_id, nodes_coords, vertex_size=vertex_sizes)\n",
-    "plt.text(0, 0.04, \"Max # of loops: \" + str(numloops_max))\n",
+    "plt.text(0, 0.04, \"Max # of loops: 10^\" + str(numloops_max))\n",
     "plt.tight_layout()"
    ]
   },
@@ -264,8 +268,8 @@
    "outputs": [],
    "source": [
     "allloops_bound = {}\n",
-    "for sourcenode in allloops:\n",
-    "    this_lengths = np.array(allloops[sourcenode][\"lengths\"])\n",
+    "for sourcenode in tqdm(allloops):\n",
+    "    this_lengths = np.array(allloops[sourcenode][\"lengths\"]) * mperunit\n",
     "    this_maxslopes = np.array(allloops[sourcenode][\"max_slopes\"])\n",
     "    mask_this = this_lengths >= restrictions[\"looplength_min\"]\n",
     "    mask_this &= this_lengths <= restrictions[\"looplength_max\"]\n",
@@ -290,9 +294,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vertex_sizes = [\n",
-    "    len(allloops_bound[k][\"loops\"]) for k in range(len(allloops_bound.keys()))\n",
-    "]\n",
+    "vertex_sizes = []\n",
+    "for k in range(len(allloops_bound.keys())):\n",
+    "    try:\n",
+    "        vertex_sizes.append(np.log10(len(allloops_bound[k][\"loops\"]) + 1))\n",
+    "    except:\n",
+    "        vertex_sizes.append(0)\n",
+    "\n",
     "numloops_max = max(vertex_sizes)\n",
     "vertex_sizes = [i / (numloops_max / 20) for i in vertex_sizes]"
    ]
@@ -328,7 +336,7 @@
     "    \"Red: Gradient >\" + str(restrictions[\"slope_max\"]) + \"%\",\n",
     "    fontsize=8,\n",
     ")\n",
-    "plt.text(0, 0.04, \"Max # of loops: \" + str(numloops_max))\n",
+    "plt.text(0, 0.04, \"Max # of loops: 10^\" + str(numloops_max))\n",
     "plt.tight_layout()"
    ]
   },
@@ -409,10 +417,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vertex_sizes = [\n",
-    "    len(allloops_bound_watered[k][\"loops\"])\n",
-    "    for k in range(len(allloops_bound_watered.keys()))\n",
-    "]\n",
+    "vertex_sizes = []\n",
+    "for k in range(len(allloops_bound_watered.keys())):\n",
+    "    try:\n",
+    "        vertex_sizes.append(np.log10(len(allloops_bound_watered[k][\"loops\"]) + 1))\n",
+    "    except:\n",
+    "        vertex_sizes.append(0)\n",
+    "\n",
     "numloops_max = max(vertex_sizes)\n",
     "vertex_sizes = [i / (numloops_max / 20) for i in vertex_sizes]"
    ]
@@ -459,7 +470,7 @@
     "    \"Red: Gradient >\" + str(restrictions[\"slope_max\"]) + \"%\",\n",
     "    fontsize=8,\n",
     ")\n",
-    "plt.text(0, 0.04, \"Max # of loops: \" + str(numloops_max))\n",
+    "plt.text(0, 0.04, \"Max # of loops: 10^\" + str(numloops_max))\n",
     "plt.tight_layout()"
    ]
   },
@@ -532,10 +543,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vertex_sizes = [\n",
-    "    len(allloops_bound_watered_diverse[k][\"loops\"])\n",
-    "    for k in range(len(allloops_bound_watered_diverse.keys()))\n",
-    "]\n",
+    "vertex_sizes = []\n",
+    "for k in range(len(allloops_bound_watered_diverse.keys())):\n",
+    "    try:\n",
+    "        vertex_sizes.append(\n",
+    "            np.log10(len(allloops_bound_watered_diverse[k][\"loops\"]) + 1)\n",
+    "        )\n",
+    "    except:\n",
+    "        vertex_sizes.append(0)\n",
+    "\n",
     "numloops_max = max(vertex_sizes)\n",
     "vertex_sizes = [i / (numloops_max / 20) for i in vertex_sizes]"
    ]
@@ -588,7 +604,7 @@
     "    \"Red: Gradient >\" + str(restrictions[\"slope_max\"]) + \"%\",\n",
     "    fontsize=8,\n",
     ")\n",
-    "plt.text(0, 0.04, \"Max # of loops: \" + str(numloops_max))\n",
+    "plt.text(0, 0.04, \"Max # of loops: 10^\" + str(numloops_max))\n",
     "plt.tight_layout()"
    ]
   },
