Add logscale parameter

--- a/code/02_explore_loops.ipynb
+++ b/code/02_explore_loops.ipynb
@@ -19,7 +19,7 @@
     "Contact: Michael Szell (michael.szell@gmail.com)\n",
     "\n",
     "Created: 2024-01-29  \n",
-    "Last modified: 2024-09-10 "
+    "Last modified: 2024-09-11"
    ]
   },
   {
@@ -69,7 +69,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run -i setup_parameters.py"
+    "%run -i setup_parameters.py\n",
+    "load_data = False  # Set to False if data are huge and have already been loaded\n",
+    "\n",
+    "if logscale:\n",
+    "    logtextplot = \"10^\"\n",
+    "    logtextsave = \"_logscale\"\n",
+    "else:\n",
+    "    logtextplot = \"\"\n",
+    "    logtextsave = \"\""
    ]
   },
   {
@@ -113,19 +121,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\n",
-    "    PATH[\"data_out\"] + \"loopcensus_\" + str(loop_numnode_bound) + \".pkl\", \"rb\"\n",
-    ") as f:\n",
-    "    allloops = pickle.load(f)\n",
-    "    alllooplengths = pickle.load(f)\n",
-    "    allloopnumnodes = pickle.load(f)\n",
-    "    allloopmaxslopes = pickle.load(f)\n",
-    "    G = pickle.load(f)\n",
-    "    loop_numnode_bound = pickle.load(f)\n",
-    "    nodes_id = pickle.load(f)\n",
-    "    nodes_coords = pickle.load(f)\n",
-    "    numloops = pickle.load(f)\n",
-    "    loopbasis = pickle.load(f)"
+    "if load_data:\n",
+    "    with open(\n",
+    "        PATH[\"data_out\"] + \"loopcensus_\" + str(loop_numnode_bound) + \".pkl\", \"rb\"\n",
+    "    ) as f:\n",
+    "        allloops = pickle.load(f)\n",
+    "        alllooplengths = pickle.load(f)\n",
+    "        allloopnumnodes = pickle.load(f)\n",
+    "        allloopmaxslopes = pickle.load(f)\n",
+    "        G = pickle.load(f)\n",
+    "        loop_numnode_bound = pickle.load(f)\n",
+    "        nodes_id = pickle.load(f)\n",
+    "        nodes_coords = pickle.load(f)\n",
+    "        numloops = pickle.load(f)\n",
+    "        loopbasis = pickle.load(f)"
    ]
   },
   {
@@ -151,7 +160,12 @@
     "axes2 = fig.add_axes([0.55, 0.1, 0.35, 0.8])\n",
     "\n",
     "axes1.hist(alllooplengths, density=True)\n",
-    "axes1.set_xlabel(\"Length [km]\")\n",
+    "if mperunit == 1000:\n",
+    "    axes1.set_xlabel(\"Length [km]\")\n",
+    "elif mperunit == 1:\n",
+    "    axes1.set_xlabel(\"Length [m]\")\n",
+    "else:\n",
+    "    axes1.set_xlabel(\"Length\")\n",
     "axes1.set_ylabel(\"Probability\")\n",
     "axes1.set_title(\"Loop lengths\")\n",
     "\n",
@@ -216,7 +230,10 @@
     "vertex_sizes = []\n",
     "for k in range(len(allloops_bound.keys())):\n",
     "    try:\n",
-    "        vertex_sizes.append(np.log10(len(allloops_bound[k][\"loops\"]) + 1))\n",
+    "        if logscale:\n",
+    "            vertex_sizes.append(np.log10(len(allloops_bound[k][\"loops\"]) + 1))\n",
+    "        else:\n",
+    "            vertex_sizes.append(len(allloops_bound[k][\"loops\"]))\n",
     "    except:\n",
     "        vertex_sizes.append(0)\n",
     "\n",
@@ -232,7 +249,7 @@
    "outputs": [],
    "source": [
     "fig = plotCheck(G, nodes_id, nodes_coords, vertex_size=vertex_sizes)\n",
-    "plt.text(0, 0.04, \"Max # of loops: 10^\" + str(numloops_max))\n",
+    "plt.text(0, 0.04, \"Max # of loops: \" + logtextplot + str(round(numloops_max, 2)))\n",
     "plt.tight_layout()"
    ]
   },
@@ -249,6 +266,7 @@
     "    + str(restrictions[\"looplength_min\"])\n",
     "    + \"to\"\n",
     "    + str(restrictions[\"looplength_max\"])\n",
+    "    + logtextsave\n",
     ")"
    ]
   },
@@ -297,7 +315,10 @@
     "vertex_sizes = []\n",
     "for k in range(len(allloops_bound.keys())):\n",
     "    try:\n",
-    "        vertex_sizes.append(np.log10(len(allloops_bound[k][\"loops\"]) + 1))\n",
+    "        if logscale:\n",
+    "            vertex_sizes.append(np.log10(len(allloops_bound[k][\"loops\"]) + 1))\n",
+    "        else:\n",
+    "            vertex_sizes.append(len(allloops_bound[k][\"loops\"]))\n",
     "    except:\n",
     "        vertex_sizes.append(0)\n",
     "\n",
@@ -336,7 +357,7 @@
     "    \"Red: Gradient >\" + str(restrictions[\"slope_max\"]) + \"%\",\n",
     "    fontsize=8,\n",
     ")\n",
-    "plt.text(0, 0.04, \"Max # of loops: 10^\" + str(numloops_max))\n",
+    "plt.text(0, 0.04, \"Max # of loops: \" + logtextplot + str(round(numloops_max, 2)))\n",
     "plt.tight_layout()"
    ]
   },
@@ -355,6 +376,7 @@
     "    + str(restrictions[\"looplength_max\"])\n",
     "    + \"_maxslope\"\n",
     "    + str(restrictions[\"slope_max\"])\n",
+    "    + logtextsave\n",
     ")"
    ]
   },
@@ -420,7 +442,11 @@
     "vertex_sizes = []\n",
     "for k in range(len(allloops_bound_watered.keys())):\n",
     "    try:\n",
-    "        vertex_sizes.append(np.log10(len(allloops_bound_watered[k][\"loops\"]) + 1))\n",
+    "        if logscale:\n",
+    "            vertex_sizes.append(np.log10(len(allloops_bound_watered[k][\"loops\"]) + 1))\n",
+    "        else:\n",
+    "            vertex_sizes.append(len(allloops_bound_watered[k][\"loops\"]))\n",
+    "\n",
     "    except:\n",
     "        vertex_sizes.append(0)\n",
     "\n",
@@ -470,7 +496,7 @@
     "    \"Red: Gradient >\" + str(restrictions[\"slope_max\"]) + \"%\",\n",
     "    fontsize=8,\n",
     ")\n",
-    "plt.text(0, 0.04, \"Max # of loops: 10^\" + str(numloops_max))\n",
+    "plt.text(0, 0.04, \"Max # of loops: \" + logtextplot + str(round(numloops_max, 2)))\n",
     "plt.tight_layout()"
    ]
   },
@@ -493,6 +519,7 @@
     "    + str(restrictions[\"slope_max\"])\n",
     "    + \"_waterlength_max\"\n",
     "    + str(restrictions[\"waterlength_max\"])\n",
+    "    + logtextsave\n",
     ")"
    ]
   },
@@ -546,9 +573,12 @@
     "vertex_sizes = []\n",
     "for k in range(len(allloops_bound_watered_diverse.keys())):\n",
     "    try:\n",
-    "        vertex_sizes.append(\n",
-    "            np.log10(len(allloops_bound_watered_diverse[k][\"loops\"]) + 1)\n",
-    "        )\n",
+    "        if logscale:\n",
+    "            vertex_sizes.append(\n",
+    "                np.log10(len(allloops_bound_watered_diverse[k][\"loops\"]) + 1)\n",
+    "            )\n",
+    "        else:\n",
+    "            vertex_sizes.append(len(allloops_bound_watered_diverse[k][\"loops\"]))\n",
     "    except:\n",
     "        vertex_sizes.append(0)\n",
     "\n",
@@ -604,7 +634,7 @@
     "    \"Red: Gradient >\" + str(restrictions[\"slope_max\"]) + \"%\",\n",
     "    fontsize=8,\n",
     ")\n",
-    "plt.text(0, 0.04, \"Max # of loops: 10^\" + str(numloops_max))\n",
+    "plt.text(0, 0.04, \"Max # of loops: \" + logtextplot + str(round(numloops_max, 2)))\n",
     "plt.tight_layout()"
    ]
   },
@@ -626,6 +656,7 @@
     "    + \"_waterlength_max\"\n",
     "    + str(restrictions[\"waterlength_max\"])\n",
     "    + \"_poidiversity3\"\n",
+    "    + logtextsave\n",
     ")"
    ]
   }
